<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cevent.CreateEventActivity"
    android:padding="20dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/eventname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:ems="10"
                android:background="@drawable/boxed_edit_text"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_event_name" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp"/>

            <EditText
                android:id="@+id/eventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@drawable/boxed_edit_text"
                android:hint="@string/select_date"
                android:inputType="date"
                android:minHeight="48dp"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp"/>

            <EditText
                android:id="@+id/eventTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@drawable/boxed_edit_text"
                android:hint="@string/select_time"
                android:inputType="time"
                android:minHeight="48dp"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp"/>

            <EditText
                android:id="@+id/eventSpeaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@drawable/boxed_edit_text"
                android:inputType="textPersonName"
                android:hint="@string/enter_speaker_name"
                android:minHeight="48dp"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp"/>

            <EditText
                android:id="@+id/eventLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@drawable/boxed_edit_text"
                android:inputType="textPersonName"
                android:hint="@string/enter_location"
                android:minHeight="48dp"
                android:importantForAutofill="no" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp"/>

            <EditText
                android:id="@+id/eventRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@drawable/boxed_edit_text"
                android:minHeight="48dp"
                android:inputType="number"
                android:hint="@string/enter_registration_fee"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp"/>

            <EditText
                android:id="@+id/eventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:lines="6"
                android:background="@drawable/boxed_edit_text"
                android:hint="@string/description"
                android:gravity="top"
                android:overScrollMode="always"
                android:scrollbars="vertical"
                android:scrollbarStyle="insideInset"
                android:scrollHorizontally="false"
                android:inputType="textMultiLine"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp"/>

            <Button
                android:id="@+id/createbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textSize="19sp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>